8216324: GetClassMethods is confused by the presence of default methods in super interfaces

Reviewed-by: sspitsyn, amenkov